--- a/Image-slider/style.css
+++ b/Image-slider/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
       "Lucida Sans Unicode", Verdana, sans-serif;
-    background-color: darkslategrey;
+    background-color:burlywood;
     display: flex;
     flex-direction: column;
     justify-content: center;
